Bump Elasticsearch to v6.3.0.
Also enables x-pack by forcibly disabling x-pack-ml.

Fixes #187
Fixes #102

Signed-off-by: Paulo Pires <pjpires@gmail.com>